fixed mobile alignment issues

--- a/styles.css
+++ b/styles.css
@@ -387,7 +387,7 @@ header {
   width: 100%;
   display: flex;
   justify-content: center;
-  padding: 2.5rem 1rem;
+  padding: 2.5rem 0rem;
 }
 
 .grid-container {
